dramaturgo-projeto/core/src/dramaturgo/DramaturgoParser.java
// Generated from Dramaturgo.g4 by ANTLR 4.7
package dramaturgo;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DramaturgoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, CADEIA=26, PERSONAGEM=27, IDENT=28, NUM=29, WS=30;
	public static final int
		RULE_programa = 0, RULE_cabecalho = 1, RULE_corpo = 2, RULE_titulo = 3, 
		RULE_personagens = 4, RULE_cenarios = 5, RULE_recursos = 6, RULE_cena = 7, 
		RULE_nome_cena = 8, RULE_mais_cenas = 9, RULE_mais_personagens = 10, RULE_mais_cenarios = 11, 
		RULE_recurso = 12, RULE_mais_recursos = 13, RULE_narrativa = 14, RULE_pulo = 15, 
		RULE_estado_personagem = 16, RULE_tipo_som = 17, RULE_entrelinhas = 18, 
		RULE_dialogo = 19, RULE_escolha = 20, RULE_mais_escolhas = 21, RULE_novo_cenario = 22, 
		RULE_nova_entrada = 23, RULE_mudanca_emocao = 24, RULE_nova_saida = 25, 
		RULE_nova_musica = 26, RULE_novo_som = 27, RULE_outra_entrada = 28, RULE_outra_mudanca = 29, 
		RULE_outra_saida = 30;
	public static final String[] ruleNames = {
		"programa", "cabecalho", "corpo", "titulo", "personagens", "cenarios", 
		"recursos", "cena", "nome_cena", "mais_cenas", "mais_personagens", "mais_cenarios", 
		"recurso", "mais_recursos", "narrativa", "pulo", "estado_personagem", 
		"tipo_som", "entrelinhas", "dialogo", "escolha", "mais_escolhas", "novo_cenario", 
		"nova_entrada", "mudanca_emocao", "nova_saida", "nova_musica", "novo_som", 
		"outra_entrada", "outra_mudanca", "outra_saida"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'FIM'", "'TITULO:'", "'PERSONAGENS:'", "'.'", "'CENARIOS:'", "'RECURSOS:'", 
		"'-'", "'CENA'", "','", "'='", "'('", "')'", "'PULE'", "'PULO FIM'", "'['", 
		"']'", "'musica'", "'som'", "'ESCOLHA:'", "'va'", "'para'", "'cenario'", 
		"'entra'", "'sai'", "'e'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "CADEIA", "PERSONAGEM", "IDENT", "NUM", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Dramaturgo.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DramaturgoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramaContext extends ParserRuleContext {
		public CabecalhoContext cabecalho() {
			return getRuleContext(CabecalhoContext.class,0);
		}
		public CorpoContext corpo() {
			return getRuleContext(CorpoContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DramaturgoVisitor ) return ((DramaturgoVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			cabecalho();
			setState(63);
			corpo();
			setState(64);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CabecalhoContext extends ParserRuleContext {
		public TituloContext titulo() {
			return getRuleContext(TituloContext.class,0);
		}
		public PersonagensContext personagens() {
			return getRuleContext(PersonagensContext.class,0);
		}
		public CenariosContext cenarios() {
			return getRuleContext(CenariosContext.class,0);
		}
		public RecursosContext recursos() {
			return getRuleContext(RecursosContext.class,0);
		}
		public CabecalhoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cabecalho; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).enterCabecalho(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).exitCabecalho(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DramaturgoVisitor ) return ((DramaturgoVisitor<? extends T>)visitor).visitCabecalho(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CabecalhoContext cabecalho() throws RecognitionException {
		CabecalhoContext _localctx = new CabecalhoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_cabecalho);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			titulo();
			setState(67);
			personagens();
			setState(68);
			cenarios();
			setState(69);
			recursos();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CorpoContext extends ParserRuleContext {
		public CenaContext cena() {
			return getRuleContext(CenaContext.class,0);
		}
		public Mais_cenasContext mais_cenas() {
			return getRuleContext(Mais_cenasContext.class,0);
		}
		public CorpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_corpo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).enterCorpo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).exitCorpo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DramaturgoVisitor ) return ((DramaturgoVisitor<? extends T>)visitor).visitCorpo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CorpoContext corpo() throws RecognitionException {
		CorpoContext _localctx = new CorpoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_corpo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			cena();
			setState(72);
			mais_cenas();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TituloContext extends ParserRuleContext {
		public TerminalNode CADEIA() { return getToken(DramaturgoParser.CADEIA, 0); }
		public TituloContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_titulo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).enterTitulo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).exitTitulo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DramaturgoVisitor ) return ((DramaturgoVisitor<? extends T>)visitor).visitTitulo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TituloContext titulo() throws RecognitionException {
		TituloContext _localctx = new TituloContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_titulo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(T__1);
			setState(75);
			match(CADEIA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PersonagensContext extends ParserRuleContext {
		public TerminalNode PERSONAGEM() { return getToken(DramaturgoParser.PERSONAGEM, 0); }
		public Mais_personagensContext mais_personagens() {
			return getRuleContext(Mais_personagensContext.class,0);
		}
		public PersonagensContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_personagens; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).enterPersonagens(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).exitPersonagens(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DramaturgoVisitor ) return ((DramaturgoVisitor<? extends T>)visitor).visitPersonagens(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PersonagensContext personagens() throws RecognitionException {
		PersonagensContext _localctx = new PersonagensContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_personagens);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(T__2);
			setState(78);
			match(PERSONAGEM);
			setState(79);
			mais_personagens();
			setState(80);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CenariosContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(DramaturgoParser.IDENT, 0); }
		public Mais_cenariosContext mais_cenarios() {
			return getRuleContext(Mais_cenariosContext.class,0);
		}
		public CenariosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cenarios; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).enterCenarios(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).exitCenarios(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DramaturgoVisitor ) return ((DramaturgoVisitor<? extends T>)visitor).visitCenarios(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CenariosContext cenarios() throws RecognitionException {
		CenariosContext _localctx = new CenariosContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cenarios);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(T__4);
			setState(83);
			match(IDENT);
			setState(84);
			mais_cenarios();
			setState(85);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecursosContext extends ParserRuleContext {
		public RecursoContext recurso() {
			return getRuleContext(RecursoContext.class,0);
		}
		public Mais_recursosContext mais_recursos() {
			return getRuleContext(Mais_recursosContext.class,0);
		}
		public RecursosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recursos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).enterRecursos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).exitRecursos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DramaturgoVisitor ) return ((DramaturgoVisitor<? extends T>)visitor).visitRecursos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RecursosContext recursos() throws RecognitionException {
		RecursosContext _localctx = new RecursosContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_recursos);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(T__5);
			setState(88);
			recurso();
			setState(89);
			mais_recursos();
			setState(90);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CenaContext extends ParserRuleContext {
		public Nome_cenaContext nome_cena() {
			return getRuleContext(Nome_cenaContext.class,0);
		}
		public NarrativaContext narrativa() {
			return getRuleContext(NarrativaContext.class,0);
		}
		public PuloContext pulo() {
			return getRuleContext(PuloContext.class,0);
		}
		public CenaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cena; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).enterCena(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).exitCena(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DramaturgoVisitor ) return ((DramaturgoVisitor<? extends T>)visitor).visitCena(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CenaContext cena() throws RecognitionException {
		CenaContext _localctx = new CenaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cena);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(T__6);
			setState(93);
			nome_cena();
			setState(94);
			match(T__6);
			setState(95);
			narrativa();
			setState(96);
			pulo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Nome_cenaContext extends ParserRuleContext {
		public TerminalNode NUM() { return getToken(DramaturgoParser.NUM, 0); }
		public Nome_cenaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nome_cena; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).enterNome_cena(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).exitNome_cena(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DramaturgoVisitor ) return ((DramaturgoVisitor<? extends T>)visitor).visitNome_cena(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Nome_cenaContext nome_cena() throws RecognitionException {
		Nome_cenaContext _localctx = new Nome_cenaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_nome_cena);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__7);
			setState(99);
			match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Mais_cenasContext extends ParserRuleContext {
		public CenaContext cena() {
			return getRuleContext(CenaContext.class,0);
		}
		public Mais_cenasContext mais_cenas() {
			return getRuleContext(Mais_cenasContext.class,0);
		}
		public Mais_cenasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mais_cenas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).enterMais_cenas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).exitMais_cenas(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DramaturgoVisitor ) return ((DramaturgoVisitor<? extends T>)visitor).visitMais_cenas(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Mais_cenasContext mais_cenas() throws RecognitionException {
		Mais_cenasContext _localctx = new Mais_cenasContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_mais_cenas);
		try {
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				cena();
				setState(102);
				mais_cenas();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Mais_personagensContext extends ParserRuleContext {
		public TerminalNode PERSONAGEM() { return getToken(DramaturgoParser.PERSONAGEM, 0); }
		public Mais_personagensContext mais_personagens() {
			return getRuleContext(Mais_personagensContext.class,0);
		}
		public Mais_personagensContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mais_personagens; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).enterMais_personagens(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).exitMais_personagens(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DramaturgoVisitor ) return ((DramaturgoVisitor<? extends T>)visitor).visitMais_personagens(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Mais_personagensContext mais_personagens() throws RecognitionException {
		Mais_personagensContext _localctx = new Mais_personagensContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_mais_personagens);
		try {
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				match(T__8);
				setState(108);
				match(PERSONAGEM);
				setState(109);
				mais_personagens();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Mais_cenariosContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(DramaturgoParser.IDENT, 0); }
		public Mais_cenariosContext mais_cenarios() {
			return getRuleContext(Mais_cenariosContext.class,0);
		}
		public Mais_cenariosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mais_cenarios; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).enterMais_cenarios(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).exitMais_cenarios(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DramaturgoVisitor ) return ((DramaturgoVisitor<? extends T>)visitor).visitMais_cenarios(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Mais_cenariosContext mais_cenarios() throws RecognitionException {
		Mais_cenariosContext _localctx = new Mais_cenariosContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_mais_cenarios);
		try {
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				match(T__8);
				setState(114);
				match(IDENT);
				setState(115);
				mais_cenarios();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecursoContext extends ParserRuleContext {
		public Estado_personagemContext estado_personagem() {
			return getRuleContext(Estado_personagemContext.class,0);
		}
		public TerminalNode CADEIA() { return getToken(DramaturgoParser.CADEIA, 0); }
		public TerminalNode IDENT() { return getToken(DramaturgoParser.IDENT, 0); }
		public Tipo_somContext tipo_som() {
			return getRuleContext(Tipo_somContext.class,0);
		}
		public RecursoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recurso; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).enterRecurso(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).exitRecurso(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DramaturgoVisitor ) return ((DramaturgoVisitor<? extends T>)visitor).visitRecurso(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RecursoContext recurso() throws RecognitionException {
		RecursoContext _localctx = new RecursoContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_recurso);
		try {
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				estado_personagem();
				setState(120);
				match(T__9);
				setState(121);
				match(CADEIA);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				match(IDENT);
				setState(124);
				match(T__9);
				setState(125);
				match(CADEIA);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				match(IDENT);
				setState(127);
				match(T__10);
				setState(128);
				tipo_som();
				setState(129);
				match(T__11);
				setState(130);
				match(T__9);
				setState(131);
				match(CADEIA);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Mais_recursosContext extends ParserRuleContext {
		public RecursoContext recurso() {
			return getRuleContext(RecursoContext.class,0);
		}
		public Mais_recursosContext mais_recursos() {
			return getRuleContext(Mais_recursosContext.class,0);
		}
		public Mais_recursosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mais_recursos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).enterMais_recursos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).exitMais_recursos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DramaturgoVisitor ) return ((DramaturgoVisitor<? extends T>)visitor).visitMais_recursos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Mais_recursosContext mais_recursos() throws RecognitionException {
		Mais_recursosContext _localctx = new Mais_recursosContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_mais_recursos);
		try {
			setState(140);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				match(T__8);
				setState(136);
				recurso();
				setState(137);
				mais_recursos();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NarrativaContext extends ParserRuleContext {
		public EntrelinhasContext entrelinhas() {
			return getRuleContext(EntrelinhasContext.class,0);
		}
		public NarrativaContext narrativa() {
			return getRuleContext(NarrativaContext.class,0);
		}
		public DialogoContext dialogo() {
			return getRuleContext(DialogoContext.class,0);
		}
		public EscolhaContext escolha() {
			return getRuleContext(EscolhaContext.class,0);
		}
		public NarrativaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_narrativa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).enterNarrativa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DramaturgoListener ) ((DramaturgoListener)listener).exitNarrativa(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DramaturgoVisitor ) return ((DramaturgoVisitor<? extends T>)visitor).visitNarrativa(this);
			else return visitor.visitChildren(this);
		}
	}
